# meetmind_repo

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/office/meetmind/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/office/meetmind/: AudioPlayerManager.java  AudioRecorder.java  MainActivity.java  MeetMindApp.java  RecordActivity.java  RecordingAdapter.java  RecordingDetailsActivity.java  RecordingModel.java  RecordingRepository.java  RecordingsActivity.java
app/src/main/java/com/office/meetmind/whisper/: ModelType.java  TranscriptActivity.java  TranscriptionCallback.java  WhisperManager.java
app/src/main/res/drawable/: bg_duration_badge.xml  bg_recording_icon.xml  circle_record_background.xml  ic_chevron_right.xml  ic_delete.xml  ic_pause.xml  ic_play.xml  ic_recording_file.xml  ic_recordings_empty.xml  ic_refresh.xml  ic_stop.xml
app/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_record_details.xml  activity_recordings.xml  activity_transcript.xml  item_recording.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/office/meetmind/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
